# miaodanew

./: .gitignore  .yarnrc.yml  BUILD_GUIDE.md  BUILD_SYSTEM.md  CLAUDE.md  CONFIG_MANAGEMENT.md  Dockerfile.windows  LOCAL_WINDOWS_BUILD.md  Makefile  PERFORMANCE_OPTIMIZATION.md  README.md  TOOLCHAIN.md  install_macos.sh  package.json  rust-toolchain.toml  test-html-artifact.html
.cargo/: config.toml
.claude/: index.json
.claude/plan/: windows-build-fix.md
.github/workflows/: README.md  build-release.yml  build-windows-installer.yml  build-windows.yml  miaoda-tauri-build.yaml  template-tauri-build-windows-x64.yml  validate-config.yml
Miaoda_Distribution/: DISTRIBUTION_README.md  MACOS_INSTALL_GUIDE.md
appstore dmg/: CertificateSigningRequest.certSigningRequest  neiwang_appstop_dmg.p12  neiwang_appstop_dmg.pem
autoqa/: CLAUDE.md  main.py
core/: CLAUDE.md  README.md  package.json
core/src/: index.ts
core/src/browser/: core.test.ts  core.ts
core/src/config/: index.ts
core/src/types/: config.ts
doc/: PROJECT_ANALYSIS_SUMMARY.md  README.md  architecture-analysis.md  best-practices.md  development-roadmap.md  ux-improvements.md  web-intro-design.md  web-intro-example.html
docs/: CLAUDE.md  theme.config.tsx
extensions/: CLAUDE.md  CONTRIBUTING.md
extensions-web/: CLAUDE.md  package.json
extensions-web/src/: index.ts  types.ts
extensions-web/src/assistant-web/: index.ts
extensions-web/src/conversational-web/: index.ts
extensions-web/src/jan-provider-web/: provider.ts
extensions/assistant-extension/src/: index.ts
extensions/conversational-extension/src/: index.ts
extensions/download-extension/src/: index.ts
extensions/llamacpp-extension/: package.json
flatpak/: ai.miaoda.Miaoda.metainfo.xml  ai.miaoda.Miaoda.yml
jan/: README.md  package.json
jan/core/: package.json
jan/extensions-web/: vite.config.ts
jan/extensions/assistant-extension/: README.md  package.json
jan/extensions/conversational-extension/: package.json
jan/extensions/download-extension/: package.json
jan/src-tauri/: tauri.bundle.windows.nsis.template
jan/web-app/: package.json
scripts/: CLAUDE.md  build-macos.sh  build-release.sh  build-web.sh  build-windows-installer.sh  build-windows-optimized.ps1  build-windows.sh  config-manager.mjs  download-bin.mjs  update-version.js  validate-config.mjs
scripts/performance/: build-monitor.ps1
src-tauri/: CLAUDE.md  Cargo.toml  Info.plist  tauri.bundle.windows.nsis.template  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml  config.toml.bak
src-tauri/.xwin-cache/unpack/Win11SDK_10.0.26100_headers.msi/: tree.txt
src-tauri/.xwin-cache/unpack/Win11SDK_10.0.26100_libs_x86_64.msi/: tree.txt
src-tauri/.xwin-cache/unpack/Win11SDK_10.0.26100_store_headers.msi/: tree.txt
src-tauri/.xwin-cache/unpack/Win11SDK_10.0.26100_store_libs.msi/: tree.txt
src-tauri/.xwin-cache/unpack/ucrt.msi/: tree.txt
src-tauri/build-utils/: buildAppImage.sh
src-tauri/icons/: icon.icns
src-tauri/plugins/tauri-plugin-hardware/: package.json
src-tauri/plugins/tauri-plugin-llamacpp/: Cargo.toml  package.json
src-tauri/resources/: LICENSE
src-tauri/resources/pre-install/: janhq-assistant-extension-1.0.2.tgz  janhq-conversational-extension-1.0.0.tgz  janhq-download-extension-1.0.0.tgz  janhq-llamacpp-extension-1.0.0.tgz  miaoda-assistant-extension-1.0.2.tgz  miaoda-conversational-extension-1.0.0.tgz  miaoda-download-extension-1.0.0.tgz  miaoda-llamacpp-extension-1.0.0.tgz
src-tauri/src/: lib.rs
src-tauri/src/core/downloads/: helpers.rs
src-tauri/src/core/mcp/: helpers.rs
src-tauri/src/core/server/: proxy.rs
web-app/: CLAUDE.md  CONTRIBUTING.md  index.html  package.json  vite.config.ts  vite.config.ts.bak  vite.config.web.ts
web-app/src/: index.css
web-app/src/i18n/: setup.ts
website/: astro.config.mjs
外部分发dmg/: CertificateSigningRequest.certSigningRequest  developerID_installer.cer  neiwang_wb_dmg.p12  neiwang_wb_dmg.pem
(+144 files in other folders)
